feat(routing, thinking): implement smart thinking downgrade and enhance model routing
- Added a smart thinking downgrade feature that converts thinking blocks to regular text when routing between incompatible model types.
- Enhanced model routing configuration to include native provider priority for sorting candidates based on preferred providers.
- Updated API handlers to utilize the new payload preparation logic for candidate models, ensuring compatibility across different model types.
- Introduced comprehensive tests for the new thinking downgrade functionality and routing enhancements.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -77,11 +77,27 @@ routing:
 # Intelligent model routing with fallback candidates.
 # When enabled, you can define virtual model names that map to multiple actual models.
 # The router will try each candidate in order until one succeeds.
+#
+# Smart Thinking Downgrade:
+# When routing across different model types (e.g., Claude -> Gemini), the router
+# automatically downgrades thinking blocks to regular text to prevent compatibility
+# errors like "Corrupted thought signature". This follows Antigravity-Manager's strategy.
+#
 # model-routing:
 #   enabled: true
 #   auto-search: true  # Auto-search all providers for models matching the base name
 #                      # e.g., "Claude-sonnet-20251124" -> searches for all "*Claude-sonnet*" models
 #   cache-file: "model-routing-cache.json"  # Persists successful routes (relative to auth-dir)
+#
+#   # Native provider priority: when auto-search finds multiple candidates,
+#   # sort them by preferred provider for each model family.
+#   # This ensures GPT models prefer codex over antigravity, etc.
+#   native-provider-priority:
+#     gpt: ["codex", "antigravity", "openai-compatibility"]
+#     claude: ["claude", "antigravity", "vertex", "gemini"]
+#     gemini: ["gemini", "vertex"]
+#     qwen: ["qwen", "antigravity"]
+#
 #   routes:
 #     # Explicit routes take priority over auto-search
 #     # Exact match: request "claude-sonnet" tries these models in order
